# lab-player-docs

./: .envrc  404.html  Makefile  README.md  devbox.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yaml  publish-docs.yaml
HOWTOs/connecting-to-cluster/: index.html
HOWTOs/create-a-compute-environment-using-templates/: index.html
HOWTOs/request-access-to-systems/: index.html
HOWTOs/setup-and-configure-your-environment/: index.html
TODOS/todos/: index.html
docs/: index.md
docs/HOWTOs/: add-instructions-to-a-lab.md  create-a-compute-environment-using-templates.md  create-incremental-labs.md  start-lab-on-staging.md  trigger-a-lab-rebuild-to-consume-upstream-changes.md  working-locally.md
scripts/: init_hook.sh
scripts/init_hook.d/: example.sh
search/: search_index.json
