[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-table-reader-plugin = "^2.0.1"
mkdocs-awesome-pages-plugin = "^2.9.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
